tests/ui/wf/range-expr-root-of-constant-issue-40749.stderr
error[E0308]: mismatched types
  --> $DIR/range-expr-root-of-constant-issue-40749.rs:2:9
   |
LL |     [0; ..10];
   |         ^^^^ expected `usize`, found `RangeTo<{integer}>`
   |
   = note: expected type `usize`
            found struct `RangeTo<{integer}>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
